added edit user files

--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
 			<p>Task 3</p>
 		</div>
 		<table class="user-data">
-            <tr>
-                <td>First Name</td>
-                <td>Last Name</td>
-                <td>Email</td>
-                <td>Points</td>
-                <td>Phone</td>
-                <td>Company</td>
-                <td>Options</td>
-            </tr>
+            <thead>
+                <tr>
+                    <td>First Name</td>
+                    <td>Last Name</td>
+                    <td>Email</td>
+                    <td>Points</td>
+                    <td>Phone</td>
+                    <td>Company</td>
+                    <td>Options</td>
+                </tr>
+            </thead>
         </table>
 	</body>
 </html>
