--- a/pages/editUser.html
+++ b/pages/editUser.html
@@ -15,5 +15,13 @@
 		<script defer src="../script/editUser.js"></script>
 		<title>Edit User</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="navbar">
+			<a href="../index.html" class="home-link">&#8592; Back to home</a>
+		</div>
+
+		<main>
+			<div class="user"></div>
+		</main>
+	</body>
 </html>
